# is31fl3741-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
examples/adafruit_rgb/: Cargo.toml  README.md
examples/adafruit_rgb/examples/: gaypride.rs  stm32.rs
examples/ledmatrix/: Cargo.toml  README.md
examples/ledmatrix/.cargo/: config.toml
examples/ledmatrix/examples/: ledtest.rs
src/: devices.rs
