[package] 
name = "is31fl3741"
version = "0.4.0"
edition = "2021"
authors = ["Liz Frost", "Daniel Schaefer"]
categories = ["embedded", "no-std"]
description = "Driver for Lumissil Microsystem's IS31FL3741 IC"
license = "MIT"
repository = "https://github.com/FrameworkComputer/is31fl3741-rs"
readme = "README.md"

[dependencies]
embedded-hal = "0.2.7"
embedded-graphics-core = { optional = true, version = "0.4.0" }

[package.metadata.docs.rs]
all-features = true

[features]
adafruit_rgb_13x9 = []
framework_ledmatrix = []
embedded_graphics = ["embedded-graphics-core"]
default = ["embedded_graphics"]
